--- a/test1.html
+++ b/test1.html
@@ -11,8 +11,8 @@ deneme ses kontrol
 bugün hava güzel
 
 Batch 76 ile GitHub dersindeyim
-
-    
+git
+    Bu kodlar sadece Cihad branch inda <var></var>
 
 </body>
 </html>
