--- a/test1.html
+++ b/test1.html
@@ -14,5 +14,7 @@ Batch 76 ile GitHub dersindeyim
 git
     Bu kodlar sadece Cihad branch inda <var></var>
 
+     biraz daha geliştirelim bakalım
+     
 </body>
 </html>
