--- a/test1.html
+++ b/test1.html
@@ -20,6 +20,8 @@ git
 
      Seni gidi findik kıran
      yılanı deliğinden çıkaraaaannnn
-     
-</body>
+
+     dumanlı derelere varayı<main></main>
+
+     dikkatli öğreng
 </html>
